classDiagram
    class URGENCY_KEYWORDS {
        <<constant>>
        medication list
        feeding list
        walk list
        grooming list
        appointment list
    }

    class TASK_ORDER {
        <<constant>>
        medication 0
        feeding 1
        walk 2
        grooming 3
        appointment 4
        other 5
    }

    class PRIORITY_EMOJI {
        <<constant>>
        high str
        medium str
        low str
    }

    class TASK_TYPE_EMOJI {
        <<constant>>
        medication str
        feeding str
        walk str
        grooming str
        appointment str
        other str
    }

    class STATUS_EMOJI {
        <<constant>>
        True str
        False str
    }

    class Pet {
        +str name
        +str species
        +float age
        +str breed
        +list special_needs
        +list tasks
        +list recurring_tasks
        +add_special_need(need str)
        +remove_special_need(need str)
        +has_special_needs() bool
        +add_task(task Task)
        +remove_task(task_id str)
        +add_recurring_task(rt RecurringTask)
        +remove_recurring_task(title str)
        +complete_task(task_id str, today_date date) Task
        +get_tasks_today(day_of_week str, today_date date) list
        +to_dict() dict
        +from_dict(data dict)$ Pet
        +__str__() str
    }

    class Task {
        +str task_id
        +str title
        +str task_type
        +int duration_minutes
        +str priority
        +str scheduled_time
        +bool is_completed
        +str pet_name
        +str notes
        +str recurrence
        +date next_due_date
        +mark_complete(today_date date)
        +mark_incomplete()
        +priority_score() int
        +urgency_score(pet Pet) int
        +is_fixed_time() bool
        +to_dict() dict
        +from_dict(data dict)$ Task
        +__str__() str
    }

    class RecurringTask {
        +str title
        +str task_type
        +int duration_minutes
        +str priority
        +str scheduled_time
        +str frequency
        +list days_of_week
        +str pet_name
        +str notes
        +int interval_days
        +str start_date
        +is_active_today(day_of_week str, today_date date) bool
        +to_task() Task
        +to_dict() dict
        +from_dict(data dict)$ RecurringTask
        +__str__() str
    }

    class Preference {
        +str category
        +str task_type
        +str value
        +str description
        +matches_task_type(task_type str) bool
        +to_dict() dict
        +from_dict(data dict)$ Preference
        +__str__() str
    }

    class Owner {
        +str name
        +int available_minutes
        +str day_start
        +int buffer_minutes
        +list pets
        +list preferences
        +add_pet(pet Pet)
        +remove_pet(pet_name str)
        +get_pet(pet_name str) Pet
        +add_preference(pref Preference)
        +remove_preference(task_type str)
        +set_available_time(minutes int)
        +get_preferences_for(task_type str) list
        +all_tasks_today(day_of_week str, today_date date) list
        +to_dict() dict
        +from_dict(data dict)$ Owner
        +save_to_json(filepath str)
        +load_from_json(filepath str)$ Owner
    }

    class DailyPlan {
        +list scheduled_tasks
        +list skipped_tasks
        +int total_duration_minutes
        +int available_minutes
        +dict reasoning
        +list conflicts
        +str overload_warning
        +str generated_at
        +add_scheduled_task(task Task, reason str)
        +add_skipped_task(task Task, reason str)
        +get_reason(task_id str) str
        +time_remaining() int
        +completion_count() int
        +all_done() bool
        +summary() str
    }

    class TaskFilter {
        <<utility>>
        +by_pet(tasks list, pet_name str)$ list
        +by_type(tasks list, task_type str)$ list
        +by_status(tasks list, completed bool)$ list
        +by_priority(tasks list, priority str)$ list
    }

    class Scheduler {
        +Owner owner
        +generate_plan(day_of_week str, today_date date) DailyPlan
        +compute_overload_warning(tasks list) str
        +detect_conflicts(fixed_tasks list) list
        +sort_by_time(tasks list) list
        -_collect_tasks(day_of_week str, today_date date) list
        -_separate_fixed(tasks list) tuple
        -_sort_flexible(tasks list, pets_by_name dict) list
        -_enforce_dependencies(tasks list) list
        -_apply_preferences(tasks list) list
        -_fit_tasks(fixed list, flexible list, budget int) tuple
        -_build_reasoning(task Task, included bool) str
        -_assign_times(tasks list, day_start str, buffer_minutes int) list
    }

    Owner "1" --> "many" Pet : has
    Owner "1" --> "many" Preference : has
    Pet "1" --> "many" Task : has
    Pet "1" --> "many" RecurringTask : has
    RecurringTask --> Task : produces via to_task()
    Pet --> Task : spawns next via complete_task()
    Scheduler --> Owner : receives
    Scheduler --> DailyPlan : produces
    DailyPlan "1" --> "many" Task : contains
    Task ..> URGENCY_KEYWORDS : reads
    Scheduler ..> TASK_ORDER : reads
